# Complex-Final-Project

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
.github/workflows/: compex.yml  static.yml
assets-local/: burn_ship.frag  default.frag  julia.frag  lambda.frag  mandelbrot.frag  popcorn.frag  popcorn.vert  std.vert
cmake-emscripten/: CMakeCache.txt  Complex_Final_Proj.data  Complex_Final_Proj.js  Complex_Final_Proj.wasm  Makefile  cmake_install.cmake  fractal.html  fractal.js  fractal.wasm  index.data  index.html  index.js
cmake-emscripten/SDL_API/: Makefile  cmake_install.cmake
cmake-emscripten/assets-local/: julia.frag  mandelbrot.frag
cmake-emscripten/cmakelists/emscripten/: Makefile  cmake_install.cmake
cmake-emscripten/shaders/: cpu.frag
cmake-emscripten/shaders/gpu_shaders/: burn_ship_inv.frag  cursorbrot.frag  default.frag  julia.frag  multibrot_float.frag  multibrot_int.frag
cmakelists/emscripten/: CMakeLists.txt  em_shell.html
fractals/: Fractal.cpp  Fractal.hpp  FractalConstants.hpp  FractalExplorer.cpp  FractalExplorer.hpp  FractalInfo.hpp  FractalPanel.cpp  FractalPanel.hpp
fractals/gui-classes/: ColorSelectorGUI.cpp  ColorSelectorGUI.hpp  FractalCompilerGUI.hpp  FractalCursor.hpp
include/: .gitignore  FractalExplorer.hpp  FractalPanel.hpp  fractaldef.hpp
include/cpu-fractals/: CPUFractal.hpp  cpu_data.hpp  cpufractaldef.hpp
include/cpu-fractals/cpu-fractal-fundamental-types/: CPUFractalDrawFunction.hpp  CPUFractalSurface.hpp
include/gpu-fractals/: GPUFractal.hpp  GPUFractalInfo.hpp  GPUFractalPanel.hpp  GPUUniforms.hpp  gpu_fractaldef.hpp
include/gui/: FractalCompilerGUI.hpp  FractalCursor.hpp  ImGuiSetup.hpp
shaders/: burn_ship.frag  julia.frag  lambda.frag  mandelbrot.frag  std.vert
shaders/gpu_shaders/: lambda.frag  lambda_sin.frag  nova.frag
src/: FractalExplorer.cpp  FractalExplorer.hpp  FractalPanel.hpp  fractaldef.hpp  main.cpp
src/cpu-fractals/: CPUFractal.cpp  CPUFractal.hpp  FractalMultithreader.cpp  FractalMultithreader.hpp  cpu_data.hpp
src/cpu-fractals/cpu-fractal-fundamental-types/: CPUFractalArgument.hpp  CPUFractalData.hpp
src/fractals/: Fractal.cpp  Fractal.hpp  FractalInfo.hpp  FractalPanel.cpp  FractalPanel.hpp
src/gpu-fractals/: GPUFractal.cpp  GPUFractal.hpp  GPUFractalInfo.hpp  GPUFractalPanel.cpp  GPUFractalPanel.hpp  gpu_fractaldef.hpp
src/gui/: ColorSelectorGUI.cpp  FractalCursor.cpp
src/gui-classes/: ColorSelectorGUI.cpp  ColorSelectorGUI.hpp  FractalCompilerGUI.hpp  FractalCursor.hpp
webpage/: Complex_Final_Proj.data  Complex_Final_Proj.html  Complex_Final_Proj.js  Complex_Final_Proj.wasm  Fractal.data  Fractal.html  Fractal.js  Fractal.wasm  index.html  index.js  index.wasm
